# intelligent-web-scraper

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT_PIPELINE.md  Dockerfile  LICENSE  MIGRATION_TO_SCRAPEROTTI.md  PERFORMANCE_MONITORING_ENHANCEMENT.md  README.md  REBRANDING_STRATEGY.md  SCRAPEROTTI_SUMMARY.md  comprehensive_test.py  demo_scraper.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_enhanced_performance.py  test_real_world.py  test_simple.py  verify_structure.py
docs/: README.md  core_systems_overview.md  error_handling.md  export_functionality.md  logging_system.md  next-testing-steps.md
docs/api/: README.md
docs/architecture/: ADR-001-orchestrator-design.md
docs/deployment/: README.md
docs/development/: code_documentation_standards.md
docs/tutorials/: extending_the_system.md  getting-started.md
examples/: advanced_orchestration_example.py  atomic_scraper_tool_example.py  basic_scraping_example.py  export_example.py  integration_patterns_example.py  monitoring_dashboard_demo.py  monitoring_dashboard_example.py  performance_monitoring_example.py
intelligent_web_scraper/: __init__.py  cli.py  config.py  ecosystem.py  llm_providers.py  main.py
intelligent_web_scraper/agents/: __init__.py  instance_manager.py  orchestrator.py  planning_agent.py
intelligent_web_scraper/concurrency/: __init__.py  async_instance.py  concurrency_manager.py  thread_safe_manager.py
intelligent_web_scraper/context_providers/: __init__.py  configuration.py  scraping_results.py  website_analysis.py
intelligent_web_scraper/core/: __init__.py  error_handling.py  logging_system.py
intelligent_web_scraper/export/: __init__.py  export_formats.py  export_manager.py  export_validators.py
intelligent_web_scraper/monitoring/: __init__.py  alerts.py  dashboard.py  metrics.py  performance_monitor.py
intelligent_web_scraper/tools/: __init__.py  atomic_scraper_tool.py  tool_factory.py
scraperotti_preview/: conductor.py  conductor_preview.py  symphony.py
scripts/: check-versions.sh  health-check.py  prepare-release.sh  sync-to-forge.sh  test-pipeline.sh  test_current_implementation.py  test_llm_providers.py
tests/: __init__.py  test_atomic_agents_integration.py  test_atomic_scraper_tool_integration.py  test_basic_setup.py  test_concurrency.py  test_config.py  test_configuration_context_provider.py  test_context_providers.py  test_end_to_end_scenarios.py  test_enhanced_concurrency_manager.py  test_enhanced_error_handling.py  test_enhanced_performance_monitor.py  test_error_handling_comprehensive.py  test_export_functionality.py  test_export_integration.py  test_export_validators.py  test_instance_manager.py  test_integration_orchestrator_planning.py  test_integration_planning_scraper.py  test_logging_system.py  test_main_integration.py  test_monitoring_comprehensive.py  test_monitoring_dashboard.py  test_monitoring_integration.py  test_orchestrator.py  test_orchestrator_integration.py  test_performance_monitor.py  test_performance_monitor_clean.py  test_performance_monitoring_integration.py  test_planning_agent_integration.py  test_scraping_results_context_provider.py  test_tool_factory.py  test_website_analysis_context_provider.py
